hphp/test/zend/good/Zend/tests/traits/error_006.php.expectf

Fatal error: A cannot use abc - it is not a trait in %s/error_006.php on line 6
